--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Your Name - Portfolio</title>
+    <title>BeCloudGuru - Portfolio</title>
 
     <link rel="stylesheet" href="styles.css">
 
@@ -20,7 +20,7 @@
 
         <nav>
 
-            <h1>Your Name</h1>
+            <h1>John Dow</h1>
 
             <ul>
 
