updated home page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <h2>Welcome to My Portfolio</h2>
 
-        <p>Computer Science Graduate | Cloud Enthusiast | Problem Solver</p>
+        <p>Computer Science Graduate | Cloud Enthusiast | AWS Certified Solutions Architect</p>
 
     </section>
 
@@ -80,7 +80,7 @@
 
     <footer>
 
-        <p>&copy; 2026 Your Name. Hosted on AWS.</p>
+        <p>&copy; 2026 Make it Your Year.</p>
 
     </footer>
 
